source/pascal/Astronomy.pas


  // Advances a gravity simulation by a small time step.
  function Astronomy_GravSimUpdate(Sim: PAstroGravSim; Time: AstroTime; NumBodies: Int32; BodyStateArray: PAstroStateVector): AstroStatus; cdecl; external LibraryName;

  // Get the position and velocity of a Solar System body included in the simulation.
  function Astronomy_GravSimBodyState(Sim: PAstroGravSim; Body: AstroBody): AstroStateVector; cdecl; external LibraryName;

  // Returns the time of the current simulation step.
  function Astronomy_GravSimTime(Sim: PAstroGravSim): AstroTime; cdecl; external LibraryName;

  // Returns the number of small bodies represented in this simulation.
  function Astronomy_GravSimNumBodies(Sim: PAstroGravSim): Int32; cdecl; external LibraryName;

  // Returns the body whose center is the coordinate origin that small bodies are referenced to.
  function Astronomy_GravSimOrigin(Sim: PAstroGravSim): AstroBody; cdecl; external LibraryName;

  // Exchange the current time step with the previous time step.
  procedure Astronomy_GravSimSwap(Sim: PAstroGravSim); cdecl; external LibraryName;

  // Releases memory allocated to a gravity simulator object.
  procedure Astronomy_GravSimFree(Sim: PAstroGravSim); cdecl; external LibraryName;

  // Solve for light travel time of a vector function.
  function Astronomy_CorrectLightTravel(Context: Pointer; Func: PAstroPositionFunc; Time: AstroTime): AstroVector; cdecl; external LibraryName;

  // Solve for light travel time correction of apparent position.
  function Astronomy_BackdatePosition(Time: AstroTime; ObserverBody: AstroBody; TargetBody: AstroBody; Aberration: AstroAberration): AstroVector; cdecl; external LibraryName;

  // Assign equatorial coordinates to a user-defined star.
  function Astronomy_DefineStar(Body: AstroBody; RA: Double; Dec: Double; DistanceLightYears: Double): AstroStatus; cdecl; external LibraryName;

implementation

end.

